// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-webpack css snapshot test - css 1`] = `
"
  .css-null-astroturf-local_classA {
    color: red;
  }

  .css-null-astroturf-local_classB {
    color: green;
  }


/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - css-local-interpolation 1`] = `
"
  .css-local-interpolation-null-astroturf-local_classA {
    color: red;
  }

  .css-local-interpolation-null-astroturf-local_classB {
    color: green;
  }


/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - styled 1`] = `
".styled-SomeComponent-astroturf-local_cls1 {
color: red;
}

/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - styled-local-interpolation 1`] = `
".styled-local-interpolation-SomeComponent-astroturf-local_cls1 {
color: red;
}

/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - styled-remote-interpolation 1`] = `
".styled-remote-interpolation-SomeComponent-astroturf-local_cls1 {
color: red;
background: green;
}

/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - xcss 1`] = `
"
.xcss-someClassName-astroturf-local_someClassName {

  color: red;

}

/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - xcss-local-interpolation 1`] = `
"
.xcss-local-interpolation-someClassName-astroturf-local_someClassName {

  color: red;

}


/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - xcss-property-assignment 1`] = `
"
.xcss-property-assignment-p_someClassName-astroturf-local_someClassName {

    color: red;
  
}

/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - xcss-property-assignment-local-interpolation 1`] = `
"
.xcss-property-assignment-local-interpolation-p_someClassName-astroturf-local_someClassName {

    color: red;
  
}


/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - xcss-property-assignment-remote-interpolation 1`] = `
"
.xcss-property-assignment-remote-interpolation-p_someClassName-astroturf-local_someClassName {

    color: red;
    background: green;
  
}


/*# sourceMappingURL=style.css.map*/"
`;

exports[`typescript-webpack css snapshot test - xcss-remote-interpolation 1`] = `
"
.xcss-remote-interpolation-someClassName-astroturf-local_someClassName {

  color: red;
  background: green;

}


/*# sourceMappingURL=style.css.map*/"
`;
